@@ -111,6 +111,7 @@
 #define KEY_NOTE_NOTE "note"
 #define KEY_NOTE_SETTER "setter"
 #define KEY_NOTE_DATE "date"
+#define KEY_FORCE_HANDLES_LOWERCASE "force_handles_lowercase"
 
 #define KEY_LDAP_ENABLE "ldap_enable"
 
@@ -1293,7 +1294,8 @@ static NICKSERV_FUNC(cmd_register)
 
     NICKSERV_MIN_PARMS((unsigned)3 + nickserv_conf.email_required);
 
-    irc_strtolower(argv[1]);
+    if(nickserv_conf.force_handles_lowercase)
+        irc_strtolower(argv[1]);
     if (!is_valid_handle(argv[1])) {
         reply("NSMSG_BAD_HANDLE", argv[1]);
         return 0;
@@ -1424,7 +1426,8 @@ static NICKSERV_FUNC(cmd_oregister)
    
     account = argv[1];
     pass = argv[2];
-    irc_strtolower(account);
+    if(nickserv_conf.force_handles_lowercase)
+        irc_strtolower(account);
     if (nickserv_conf.email_required) {
         NICKSERV_MIN_PARMS(4);
         email = argv[3];
@@ -1828,7 +1831,8 @@ static NICKSERV_FUNC(cmd_rename_handle)
     unsigned int nn;
 
     NICKSERV_MIN_PARMS(3);
-    irc_strtolower(argv[2]);
+    if(nickserv_conf.force_handles_lowercase)
+        irc_strtolower(argv[2]);
     if (!(hi = get_victim_oper(cmd, user, argv[1])))
         return 0;
     if (!is_valid_handle(argv[2])) {
@@ -4172,7 +4176,8 @@ nickserv_db_read_handle(char *handle, dict_t obj)
         authed_users = NULL;
         channels = NULL;
     }
-    irc_strtolower(handle);
+    if(nickserv_conf.force_handles_lowercase)
+        irc_strtolower(handle);
     hi = register_handle(handle, str, id);
     if (authed_users) {
         hi->users = authed_users;
@@ -4571,6 +4576,10 @@ nickserv_conf_read(void)
 
     str = database_get_data(conf_node, KEY_LDAP_ENABLE, RECDB_QSTRING);
     nickserv_conf.ldap_enable = str ? strtoul(str, NULL, 0) : 0;
+
+    str = database_get_data(conf_node, KEY_FORCE_HANDLES_LOWERCASE, RECDB_QSTRING);
+    nickserv_conf.force_handles_lowercase = str ? strtol(str, NULL, 0) : 0;
+
 #ifndef WITH_LDAP
     if(nickserv_conf.ldap_enable > 0) {
         /* ldap is enabled but not compiled in - error out */
